# Kairos

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  vite.config.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260629_01_initial_schema.py  20260629_02_tenant_admin_fields.py  20260629_03_tenant_public_branding.py  20260629_04_email_verification.py  20260629_05_google_auth.py  20260629_06_service_appointment_details.py  20260629_07_tenant_location_and_images.py  20260629_08_tenant_payment_provider.py  20260629_09_tenant_trial_subscription.py  20260709_10_subscription_plan_settings.py  20260714_11_notifications.py  20260714_12_service_scheduling_mode.py  20260715_13_booking_no_show_status.py  20260720_14_paystack_payment_fields.py  20260723_15_tenant_help_email.py  20260723_16_timezone_and_notification_prefs.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  crypto.py  datetime_utils.py  deps.py  logging.py  observability.py  security.py  telemetry.py
backend/app/infra/: cache.py  calendar_ics.py  db.py  email.py  models.py  paystack.py  storage.py
backend/app/modules/: __init__.py
backend/app/schemas/: __init__.py  auth.py  availability.py  bookings.py  clients.py  payments.py  services.py  (+2 more)
backend/docs/: operations.md  schema.md
backend/tests/: test_calendar_ics.py  test_email.py  test_health.py
(+153 files in other folders)
