[project]
name = "kairos-bookings-backend"
version = "0.1.0"
description = "FastAPI backend for Kairos Bookings"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "greenlet>=3.0.3",
  "asyncpg>=0.30.0",
  "psycopg2-binary>=2.9.9",
  "aiosqlite>=0.20.0",
  "alembic>=1.14.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[argon2]>=1.7.4",
  "redis>=5.2.0",
  "httpx>=0.28.0",
  "tenacity>=9.0.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "structlog>=24.4.0",
  "python-multipart>=0.0.12",
  "email-validator>=2.2.0",
  "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["jose", "jose.*", "passlib", "passlib.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
